syntax = "proto3";
package Wiaoj.Consensus.Raft;

import "google/protobuf/empty.proto"; 

// Raft Düðümleri arasýndaki iletiþim servisi
service RaftConsensus {
  // Liderlik için oy isteme RPC'si.
  // Adaylar tarafýndan oy toplamak için çaðrýlýr.
  rpc RequestVote (RequestVoteArgs) returns (RequestVoteResult);

  // Log girdilerini çoðaltma RPC'si.
  // Lider tarafýndan diðer sunuculara log girdilerini göndermek ve
  // heartbeat (kalp atýþý) olarak kullanýlýr.
  rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesResult);

  
  rpc InstallSnapshot (InstallSnapshotArgs) returns (InstallSnapshotResult);
}

// RequestVote RPC için argümanlar
message RequestVoteArgs {
  // Adayýn dönemi (term)
  int64 term = 1; 
  // Oy isteyen adayýn kimliði
  string candidate_id = 2;
  // Adayýn logundaki son girdinin indeksi
  int64 last_log_index = 3; 
  // Adayýn logundaki son girdinin dönemi
  int64 last_log_term = 4;
}

// RequestVote RPC için sonuç
message RequestVoteResult {
  // Mevcut dönem (term), adayýn kendi dönemini güncellemesi için
  int64 term = 1;
  // Adaya oy verildiyse true
  bool vote_granted = 2;
}


// AppendEntries RPC için argümanlar
message AppendEntriesArgs {
  // Liderin dönemi (term)
  int64 term = 1;
  // Liderin kimliði, böylece takipçiler istemcileri yönlendirebilir
  string leader_id = 2;
  // Yeni girdiden hemen önceki girdinin log indeksi
  int64 prev_log_index = 3;
  // prev_log_index'teki girdinin dönemi
  int64 prev_log_term = 4;
  // Depolanacak log girdileri (heartbeat için boþ olabilir)
  repeated LogEntry entries = 5;
  // Liderin kesinleþmiþ (committed) logunun indeksi
  int64 leader_commit_index = 6;
}

message LogEntry {
  int64 term = 1;
  bytes command = 2;
}

// AppendEntries RPC için sonuç
message AppendEntriesResult {
  // Mevcut dönem (term), liderin kendi dönemini güncellemesi için
  int64 term = 1;
  // Takipçi, prev_log_index ve prev_log_term'ü içeren bir girdi bulduysa true
  bool success = 2;
}

message InstallSnapshotArgs {
  int64 term = 1;
  string leader_id = 2;
  int64 last_included_index = 3;
  int64 last_included_term = 4;
  bytes data = 5;
}

message InstallSnapshotResult {
  int64 term = 1;
}